<resources>

    <string name="app_name">NATS</string>
    <string name="start_game">New Game</string>
    <string name="highscores">Highscores</string>
    <string name="settings">Settings</string>
    <string name="exit">Leave Game</string>
    <string name="text">Beispieltext</string>
    <string name="pause">Pause</string>
    <string name="con">Continue</string>
    <string name="quit">Quit</string>
    <string name="move_speed">Move Speed</string>
    <string name="gunner">Gunner</string>
    <string name="shield">Shield</string>
    <string name="shot_frequence">Shot Frequence</string>
    <string name="shot_spreading">Shot Spreading</string>
    <string name="stasis_field">Stasis Field</string>
    <string name="turbo">Turbo</string>
    <string name="deadly_trail">Deadly Trail</string>
    <string name="bomb">Bomb</string>
    <string name="upgrade">Upgrade</string>
    <string name="linkerJoystickAußen">Linker Joystick Außen</string>
    <string name="linkerJoystickInnen">Linker Joystick Innen</string>
    <string name="rechterJoystickAußen">Rechter Joystick Außen</string>
    <string name="rechterJoystickInnen">Rechter Joystick Innen</string>

</resources>
