<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/title_picture"
    tools:ignore="PxUsage" >

    <Button
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/highscores"
        android:layout_below="@+id/highscores"
        android:layout_marginTop="20dp"
        android:text="@string/settings" />

    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/settings"
        android:layout_below="@+id/settings"
        android:layout_marginTop="18dp"
        android:text="@string/exit" />

    <Button
        android:id="@+id/highscores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_game"
        android:layout_below="@+id/new_game"
        android:layout_marginTop="22dp"
        android:text="@string/highscores" />

    <Button
        android:id="@+id/new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/start_game" />

</RelativeLayout>
