<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/gunner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/move_speed"
        android:layout_below="@+id/move_speed"
        android:layout_marginTop="16dp"
        android:minWidth="120dp"
        android:text="@string/gunner" />

    <Button
        android:id="@+id/shield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/gunner"
        android:layout_below="@+id/gunner"
        android:layout_marginTop="16dp"
        android:minWidth="120dp"
        android:text="@string/shield" />

    <Button
        android:id="@+id/move_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:minWidth="120dp"
        android:text="@string/move_speed" />

    <ProgressBar
        android:id="@+id/progress_move_speed"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/progress_shot_frequence"
        android:layout_toRightOf="@+id/move_speed"
        android:minHeight="5dp"
        android:minWidth="100dp" />

    <ProgressBar
        android:id="@+id/progress_gunner"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gunner"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/gunner"
        android:minHeight="5dip"
        android:minWidth="100dp" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/progress_gunner"
        android:layout_toRightOf="@+id/shot_spreading"
        android:minHeight="5dp"
        android:minWidth="100dp" />

    <ProgressBar
        android:id="@+id/progress_shield"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/shield"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/shield"
        android:minHeight="5dp"
        android:minWidth="100dp" />

    <ProgressBar
        android:id="@+id/progress_shot_frequence"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/shot_frequence"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/shot_frequence"
        android:minHeight="5dp"
        android:minWidth="100dp" />

    <Button
        android:id="@+id/stasis_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/shield"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="31dp"
        android:minWidth="95dp"
        android:text="@string/stasis_field" />

    <Button
        android:id="@+id/turbo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stasis_field"
        android:layout_alignBottom="@+id/stasis_field"
        android:layout_alignRight="@+id/progress_shield"
        android:minWidth="95dp"
        android:text="@string/turbo" />

    <Button
        android:id="@+id/deadly_trail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/turbo"
        android:layout_alignBottom="@+id/turbo"
        android:layout_marginLeft="31dp"
        android:layout_toRightOf="@+id/turbo"
        android:minWidth="95dp"
        android:text="@string/deadly_trail" />

    <Button
        android:id="@+id/bomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/deadly_trail"
        android:layout_alignBottom="@+id/deadly_trail"
        android:layout_alignParentRight="true"
        android:layout_marginRight="28dp"
        android:minWidth="95dp"
        android:text="@string/bomb" />

    <Button
        android:id="@+id/shot_frequence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gunner"
        android:layout_alignLeft="@+id/deadly_trail"
        android:minWidth="120dp"
        android:text="@string/shot_frequence" />

    <Button
        android:id="@+id/shot_spreading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shield"
        android:layout_alignLeft="@+id/shot_frequence"
        android:minWidth="120dp"
        android:text="@string/shot_spreading" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/deadly_trail"
        android:layout_alignLeft="@+id/deadly_trail"
        android:layout_alignRight="@+id/progress"
        android:layout_below="@+id/shot_spreading"
        android:background="#0000ff"
        android:minHeight="100dp"
        android:minWidth="100dp" >

    </RelativeLayout>

</RelativeLayout>
